--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -141,6 +141,7 @@ body {
                         <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.facebook.com"><span>Facebook</span></li>
                         <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.twitter.com"><span>Twitter</span></li>
                         <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.instagram.com"><span>Instagram</span></li>
+                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.plus.google.com"><span>Google+</span></li>
                         <li id="soc"><img id="favimg" src="https://www.tumblr.com/favicon.ico"><span>Tumblr</span></li>
                         <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.vine.co"><span>Vine</span></li>
                         <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.youtube.com"><span>Youtube</span></li>
