--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -42,6 +42,7 @@ form {
 
 .list-group-item {
     height: 52px;
+    border-radius: 0%;
 }
 
 #link2 {
@@ -93,7 +94,7 @@ form {
     background-color: #fff;
     padding: 0%;
 }
-
+2
 body {
     background-color: #eee;
 }
