--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -90,10 +90,10 @@ form {
 #wrap {
     max-width: 40%;
     height: auto;
-    background-color: #fff;
+    background-color: #eee;
     padding: 0%;
 }
-2
+
 body {
     background-color: #eee;
 }
@@ -141,7 +141,7 @@ body {
                         <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.facebook.com"><span>Facebook</span></li>
                         <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.twitter.com"><span>Twitter</span></li>
                         <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.instagram.com"><span>Instagram</span></li>
-                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.plus.google.com"><span>Google+</span></li>
+                        <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.plus.google.com"><span>Youtube</span></li>
                         <li id="soc"><img id="favimg" src="https://www.tumblr.com/favicon.ico"><span>Tumblr</span></li>
                         <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.vine.co"><span>Vine</span></li>
                         <li id="soc"><img src="http://www.google.com/s2/favicons?domain=www.youtube.com"><span>Youtube</span></li>
