--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -106,7 +106,7 @@ body {
 <div class="media">
     <div class="media-middle">
         <a href="#">
-            <img class="media-object" src="static/img/grey_icon.png" alt="...">
+            <img class="media-object" src="https://sigil.cupcake.io/{{ user }}?w=96" alt="...">
         </a>
     </div>
     <div class="media-body ">
