--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -104,7 +104,7 @@ body {
 </nav>
 {% if user %}
 <div class="media">
-    <div class="media-middle">
+    <div class="media-left">
         <a href="#">
             <img class="media-object" src="https://sigil.cupcake.io/{{ user }}?w=96" alt="...">
         </a>
