--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -90,7 +90,7 @@ form {
 #wrap {
     max-width: 40%;
     height: auto;
-    background-color: #eee;
+    background-color: #fff;
     padding: 0%;
 }
 
