--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -100,7 +100,7 @@ body {
 }
 
 #sharebtn {
-    margin: 30px;
+    margin-right: 20px;
     vertical-align: middle;
     display: inline;
 }
@@ -111,6 +111,7 @@ body {
 
 h3 {
     padding-top: 40px;
+    padding-left: 0;
 }
 
 #nameuser {
