--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -169,9 +169,9 @@ h3 {
     </center>
     {% endif %}
     <div id="banner" class="container">
-        <span><p id="sharebtn" class="lead"><a style="color: #4B67A1; text-decoration: none !important;" href="https://www.facebook.com/sharer/sharer.php?u=http://snowflakeapp.herokuapp.com/{{ user }}">Facebook</a></p></span>
-        <span><p id="sharebtn" class="lead"><a style=" color: #5EA9DD; text-decoration: none !important;" href="https://twitter.com/share" data-text="View my snowflake">Twitter</a></p></span>
-        <span><p id="sharebtn" class="lead"><a style="color: #DF4B38; margin-right: 0; text-decoration: none !important;" href="https://plus.google.com/share?url=http%3A%2F%2Fhttp://snowflakeapp.herokuapp.com/{{ user }}">Google+</a></p></span>
+        <span><p id="sharebtn" class="lead"><a style="color: #4B67A1; text-decoration: none !important;" href="#">Facebook</a></p></span>
+        <span><p id="sharebtn" class="lead"><a style=" color: #5EA9DD; text-decoration: none !important;" href="#">Twitter</a></p></span>
+        <span><p id="sharebtn" class="lead"><a style="color: #DF4B38; margin-right: 0; text-decoration: none !important;" href="#">Google+</a></p></span>
     </div>
     <div id='list'>
         <ul class="list-group clearfix">
