--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -17,6 +17,11 @@ body {
     height: 52px;
 }
 
+.list-group {
+    max-height: 40%;
+    overflow-y: scroll;
+}
+
 .navbar-default .navbar-brand {
     color: #BC5798;
 }
@@ -69,10 +74,11 @@ body {
 }
 
 #list {
-    height: 40%;
     width: auto;
     bottom: 0;
     width: 100%;
+    height: 500px;
+
 }
 
 .media-object {
@@ -120,7 +126,7 @@ h3 {
 
 #wrap {
     max-width: 40%;
-    height: auto;
+    height: 100%;
     background-color: #fff;
     padding: 0%;
 }
@@ -128,7 +134,7 @@ h3 {
 @media only screen and (max-width: 600px) {
     #wrap {
         max-width: 100%;
-        height: auto;
+        height: 100%;
     }
     body {
         background-color: #fff;
