--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -18,7 +18,7 @@ body {
 }
 
 .list-group {
-    max-height: 20%;
+    max-height: 40%;
     overflow-y: scroll;
 }
 
@@ -77,8 +77,7 @@ body {
     width: auto;
     bottom: 0;
     width: 100%;
-    max-height: 40px;
-
+    height: 400px;
 }
 
 .media-object {
