--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -21,6 +21,8 @@ body {
     max-height: 40%;
     overflow-y: scroll;
     bottom: 0;
+    margin-bottom: 0;
+    position: fixed;
 }
 
 .navbar-default .navbar-brand {
