--- a/app/templates/pages/show.html
+++ b/app/templates/pages/show.html
@@ -20,10 +20,7 @@ body {
 .list-group {
     max-height: 38%;
     overflow-y: scroll;
-    bottom: 0;
-    margin-bottom: 0;
     width: 100%;
-    position: fixed;
 }
 
 .navbar-default .navbar-brand {
@@ -76,7 +73,6 @@ body {
     height: auto;
     border: 0px;
 }
-
 
 .media-object {
     width: 100px;
@@ -135,6 +131,14 @@ h3 {
     }
     body {
         background-color: #fff;
+    }
+    .list-group {
+        max-height: 38%;
+        overflow-y: scroll;
+        bottom: 0;
+        margin-bottom: 0;
+        width: 100%;
+        position: fixed;
     }
 }
 </style>
