--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -106,6 +106,14 @@ body {
     body {
         background-color: #fff;
     }
+    .list-group {
+        max-height: 37%;
+        overflow-y: scroll;
+        bottom: 0;
+        margin-bottom: 0;
+        width: 100%;
+        position: fixed;
+    }
 }
 
 .scrollable-menu {
