--- a/app/templates/pages/letitsnow.html
+++ b/app/templates/pages/letitsnow.html
@@ -5,9 +5,7 @@ form {
     margin-bottom: 5px;
 }
 
-#list {
-    
-}
+#list {}
 
 ` .navbar {
     background-color: white;
@@ -38,6 +36,13 @@ form {
 
 .list-group-item {
     height: 52px;
+    border-color: #F5F5F5;
+}
+
+.list-group {
+    max-height: 38%;
+    overflow-y: scroll;
+    width: 100%;
 }
 
 #link2 {
@@ -59,6 +64,7 @@ form {
     font-size: 12px;
     line-height: 1.42;
     border-radius: 15px;
+    margin-right: 4px;
 }
 
 .dropdown-menu {
@@ -105,7 +111,6 @@ body {
     .list-group {
         max-height: 37%;
         overflow-y: scroll;
-        
         margin-bottom: 0;
         width: 100%;
         position: fixed;
